--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <title>A Pok&eacute;mon Calculator</title>
     <link type="text/css" rel="stylesheet" href="./select2/select2.css" />
-    <link type="text/css" rel="stylesheet" href="./shared_controls.css?d0dc62b1" />
+    <link type="text/css" rel="stylesheet" href="./shared_controls.css" />
     <link type="text/css" rel="stylesheet" href="./bootstrap.css" />
 </head>
 
