corrected github link at bottom

--- a/index.html
+++ b/index.html
@@ -1319,7 +1319,7 @@
     <script type="text/javascript" src="./js/moveset_import.js?d0b1f439"></script>
 </div>
 
-    <div style="clear:both;padding:20px;text-align:right"><p><a href="https://doug-cady.github.io/dougcady_poke.github.io/" target="_blank">GitHub repository for the damage calculator</a></p></div>
+    <div style="clear:both;padding:20px;text-align:right"><p><a href="https://github.com/doug-cady/dougcady_poke.github.io" target="_blank">GitHub repository for the damage calculator</a></p></div>
 
 </body>
 
