Added in toggle field button that was missing.

--- a/index.html
+++ b/index.html
@@ -1288,6 +1288,9 @@
             </div>
         </fieldset>
     </div>
+    <div>
+        <button id="fieldToggle">Toggle Field</button>
+    </div>
     <script type="text/javascript">
         var linkExtension = '.html';
     </script>
