Added in toggle fieldpanel id to panel div to link to js file.

--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
         </fieldset>
     </div>
     
-    <div class="panel">
+    <div class="panel" id="fieldPanel">
         <div aria-label="Field information" role="region">
             <fieldset class="field-info">
                 <legend align="center">Field</legend>
