--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="wrapper">
 
     <div aria-label="Settings" role="region">
-        <span class="title-text">Battle Tree Damage Calculator</span>
+        <span class="title-text">Battle Factory Damage Calculator</span>
         <span aria-labelledby="selectGenInstruction" role="radiogroup" title="Select the generation.">
             <span class="visually-hidden" id="selectGenInstruction">Select the generation.</span>
             <input class="gen visually-hidden" type="radio" name="gen" value="3" id="gen3" /><label class="btn btn-small btn-left" for="gen3">ADV</label>
@@ -718,14 +718,6 @@
                     </div>
                     <div class="right" title="Is this Pokemon protected by Aurora Veil?">
                         <input class="btn-input calc-trigger" type="checkbox" id="auroraVeilR" /><label class="btn btn-wide" for="auroraVeilR">Aurora Veil</label>
-                    </div>
-                </div>
-                <div class="btn-group gen-specific g2 g3 g4 g5 g6 g7">
-                    <div class="left" title="Has this Pokemon been revealed with Foresight or Odor Sleuth?">
-                        <input class="btn-input calc-trigger" type="checkbox" id="foresightL" /><label class="btn btn-wide" for="foresightL">Foresight</label>
-                    </div>
-                    <div class="right" title="Has this Pokemon been revealed with Foresight or Odor Sleuth?">
-                        <input class="btn-input calc-trigger" type="checkbox" id="foresightR" /><label class="btn btn-wide" for="foresightR">Foresight</label>
                     </div>
                 </div>
         <div class="btn-group gen-specific g7">
