--- a/index.html
+++ b/index.html
@@ -605,7 +605,8 @@
 
         <div class="leveloverride gen-specific g3 g4" aria-labelledby="selectLevelOverride" align="center" style="margin: 0 auto 2px" title="Set the default level of loaded sets.">
             <span class="visually-hidden" id="selectLevelOverride">Set the default level of loaded sets.</span>
-            <input class="leveloverride calc-trigger" id="leveloverride" value="50" />
+            <text>Default Level: </text>
+            <input class="leveloverride calc-trigger" id="leveloverride" value="100" />
         </div>
 
                 <div aria-labelledby="selectBattleFormatInstruction" class="gen-specific g3 g4 g5 g6 g7" role="radiogroup" style="width: 10.6em; margin: 0 auto 5px;" title="Select the battle format.">
